Modify Workflow file

--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -27,3 +27,9 @@ jobs:
             
             - name: Build
               run: npm run build:prod
+            
+            - name: Deploy
+              uses: JamesIves/github-pages-deploy-action@v4
+              with:
+                folder: dist/test-github-pages/broswer
+                branch: gh-pages
