--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -31,5 +31,6 @@ jobs:
             - name: Deploy
               uses: JamesIves/github-pages-deploy-action@v4
               with:
+                token: ${{secrets.ACTION_DEPLOY_KEY}}
                 folder: ./dist/test-github-pages/
                 branch: gh-pages
